<resources>
    <string name="app_name">Barcelona Cripto</string>
    <string name="criptomoeda">Criptomoeda</string>
    <string name="valor">Valor</string>
    <string name="quantidade">Quantidade</string>
    <string name="data">Data</string>
    <string name="data_da_compra">Data da compra</string>
    <string name="comprar">Comprar</string>
    <string name="variacao">Variação</string>
    <string name="lucro">Lucro</string>
    <string name="remover">Remover</string>
    <string name="adicionar_criptomoeda">Adicionar Criptomoeda</string>
    <string name="ver_lista_ativos">Ver lista de ativos</string>
    <string name="escolha_moeda">Escolha uma moeda</string>
</resources>
